@@ -505,3 +505,4 @@ N(OP_CorpseDrop),
 N(OP_ChangeSize),
 N(OP_GroupMakeLeader),
 N(OP_RemoveAllDoors),
+N(OP_RemoveNimbusEffect),
