@@ -258,6 +258,7 @@ OP_MoveCoin=0x0000
 OP_ReloadUI=0x0000
 OP_CameraEffect=0x0000
 OP_SpellEffect=0x0000
+OP_RemoveNimbusEffect=0x0000
 
 # SoD Opcodes
 OP_SpawnPositionUpdate=0x0000		# 0x4656
