@@ -320,9 +320,10 @@ OP_DisciplineUpdate=0x0000			#
 OP_BecomeCorpse=0x0000				# 
 OP_Action2=0x0000					# C OP_Damage?
 OP_MobUpdate=0x4656				# was 0x4656
-OP_NPCMoveUpdate=0x5d24				#
-OP_CameraEffect=0x0000				# V
-OP_SpellEffect=0x0000				# V
+OP_NPCMoveUpdate=0x5d24				# 
+OP_CameraEffect=0x0000				# 
+OP_SpellEffect=0x0000				# 
+OP_RemoveNimbusEffect=0x7327		# V
 
 OP_DzQuit=0x0000
 OP_DzListTimers=0x0000
