@@ -332,6 +332,7 @@ OP_CameraEffect=0x0d96				# V
 OP_SpellEffect=0x7309				# V
 OP_AltCurrency=0x25e4
 OP_ShroudProgress=0x0296
+OP_RemoveNimbusEffect=0x5272		# C
 
 # Expedition
 OP_DzQuit=0x054e
