@@ -316,6 +316,7 @@ OP_DisciplineUpdate=0x0000		#
 OP_BecomeCorpse=0x0000			#
 OP_CameraEffect=0x23f9			# C
 OP_SpellEffect=0x3e90			# C
+OP_RemoveNimbusEffect=0x5872	# C
 
 #expedition
 OP_DzQuit=0x20d6
