@@ -281,6 +281,7 @@ OP_ApplyPoison=0x0c2c
 OP_AugmentInfo=0x45ff		#RealityIncarnate 4/28/09
 OP_SetStartCity=0x41dc			#realityincarnate 6/25/09
 OP_SpellEffect=0x22C5 
+OP_RemoveNimbusEffect=0x0000
 
 OP_DzQuit=0x486d
 OP_DzListTimers=0x39aa
