@@ -332,6 +332,7 @@ OP_MobUpdate=0x4656					# Same as OP_SpawnPositionUpdate
 OP_NPCMoveUpdate=0x0f3e				#
 OP_CameraEffect=0x6b0e				# V
 OP_SpellEffect=0x57a3				# V
+OP_RemoveNimbusEffect=0x2c77		# C
 
 OP_DzQuit=0x1539
 OP_DzListTimers=0x21e9
