@@ -1,5 +1,8 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+==06/22/2011==
+Trevius: Added new Perl Mob quest object RemoveNimbusEffect(effectid) for removing permanent nimbus particle effects.
+
 ==06/20/2011==
 JJ: Added message to client when using #instance destroy command.
 JJ: Altered doors index to include version to help bring door ids below 256 in zones with multiple versions. Required SQL provided.
